fix letter spacing span sezioni

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -15,6 +15,7 @@
 
 span.custom {
     position: relative;
+    letter-spacing: 2px;
     left: 60px;
     &:before {
         content: '';
